@@ -1,11 +1,20 @@
 from __future__ import absolute_import
 
 import functools
+import logging
+import mock
 import pytest
+
+from rediscluster.exceptions import RedisClusterException
 
 from sentry.exceptions import InvalidConfiguration
 from sentry.testutils.cases import TestCase
-from sentry.utils.redis import (ClusterManager, _shared_pool, get_cluster_from_options)
+from sentry.utils.redis import (
+    ClusterManager, _shared_pool, get_cluster_from_options, _RedisCluster, logger
+)
+
+# Silence connection warnings
+logger.setLevel(logging.ERROR)
 
 make_manager = functools.partial(
     ClusterManager,
@@ -28,9 +37,17 @@ make_manager = functools.partial(
                     },
                 }
             },
+            'baz': {
+                'is_redis_cluster': True,
+                'hosts': {
+                    0: {},
+                },
+            },
         },
     },
 )
+
+redis_cluster_exception = RedisClusterException('Failed to connect')
 
 
 class ClusterManagerTestCase(TestCase):
@@ -41,6 +58,19 @@ class ClusterManagerTestCase(TestCase):
         assert manager.get('foo').pool_cls is _shared_pool
         with pytest.raises(KeyError):
             manager.get('invalid')
+
+    @mock.patch('rediscluster.StrictRedisCluster')
+    def test_specific_cluster(self, cluster):
+        manager = make_manager(cluster_type=_RedisCluster)
+        assert manager.get('baz') is cluster.return_value
+        with pytest.raises(KeyError):
+            manager.get('foo')
+
+    @mock.patch('rediscluster.StrictRedisCluster', side_effect=redis_cluster_exception)
+    def test_failed_redis_cluster(self, cluster):
+        manager = make_manager(cluster_type=_RedisCluster)
+        with pytest.raises(KeyError):
+            manager.get('baz')
 
 
 def test_get_cluster_from_options():
