@@ -3,6 +3,10 @@ Version 8.20 (Unreleased)
 - Make BitBucket repositories enabled by default
 - Add raw data toggle for Additional Data
 
+- Add initial support for Redis Cluster.
+- Support a list of hosts in the ``redis.clusters`` configuration along side
+  the traditional dictionary style configuration.
+
 Schema Changes
 ~~~~~~~~~~~~~~
 - Added index on ``ProjectPlatform(last_seen)`` column
